# SnifferPy

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  snifferpy.yaml
docs/: Sniffing.md  index.md
snifferpy/: __init__.py  cli.py  report.py  sniffing.py
tests/: test_sniff.py
