[project]
name = "snifferpy"
packages = [
    { include = "snifferpy" }
]
license = "CoffeeWare"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: Portuguese",
]
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno-Gomes-QA",email = "bruno.gomes.qa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.16,<4.0"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.14.1"
pytest-mysql = "^3.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.29.0"
mkdocs-material = "^9.6.8"
mkdocstrings-python = "^1.16.5"
jinja2 = "^3.1.6"

[tool.pytest.init_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue . && isort ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=snifferpy -vv"
post_test = "coverage html"